cmake_minimum_required(VERSION 3.20)
project(TestingProblems)

set(CMAKE_CXX_STANDARD 14)

add_executable(TestingProblems
        #字符串类/5.最长回文子串.cpp
        #字符串类/无重复字符的最长子串.cpp
        #排序类/HJ68成绩排序.cpp
        #数组/HJ3明明的随机数.cpp
        #链表/合并两个有序链表.cpp
        #链表/反转链表.cpp
        #链表/分隔链表.cpp
        #链表/合并k个升序链表.cpp
        #字符串类/49.字符串异位词分组.cpp
        #哈希表/128.最长连续子序列.cpp
        #数组/接雨水.cpp
        #数组/560和为k的子数组.cpp
        #数组/239滑动窗口最大值.cpp
        #数组/74搜索二维矩阵.cpp
        #数组/287寻找重复数.cpp
        #数组/53最大子数组和.cpp
        #数组/238除数组自身以外的乘积.cpp
        #数组/189轮转数组.cpp
        #数组/73矩阵置零.cpp
        #数组/169多数元素.cpp
        #数组/56合并区间.cpp
        #数组/15三数之和.cpp
        #字符串类/反转字符串中的单词.cpp
        #数组/300最长递增子序列.cpp
        #链表/148排序链表.cpp
        #数组/54螺旋矩阵.cpp
        #二叉树/101对称二叉树.cpp
        #数组/739每日温度.cpp
        #字符串类/8字符串转换整数.cpp
        数组/46全排列.cpp)
